--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>Weather Dashboard</h1>
+        </nav>
+    </header>
+
+    <main id="container">
+        <section id="div1">
+            <h2>Search for a City:</h2>
+            <input type="select" id="select"> <br>
+            <button id="search">Search</button>
+
+            <div id="history"></div>
+        </section>
+
+        <section id="forecast">
+            <div id="weatherDetail"></div>
+            <h3 id="dayFive">5-Day Forecast:</h3>
+
+        </section>
+
+
+    </main>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
