--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="forecast">
             <div id="weatherDetail"></div>
-            <h3 id="dayFive">5-Day Forecast:</h3>
+            <div id="dayFive"></div>
 
         </section>
 
