add array for city

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input type="select" id="select"> <br>
             <button id="search">Search</button>
 
-            <div id="history"></div>
+            <ul id="history"></ul>
         </section>
 
         <section id="forecast">
